# ngt-cxx-rs

./: .gitmodules  Cargo.toml  build.rs
src/: helper.cpp  main.rs
